# basic_agentic_rag

./: .gitignore  Makefile  README.md  pyproject.toml
