[tool.poetry]
name = "poc_agentic_rag"
version = "0.1.0"
description = ""
authors = ["David Carricondo Sánchez <dacsmail00@gmail.com>"]
readme = "README.md"
# packages = [{include = "poc_agentic_rag"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
pydantic = "^2.9.2"
langchain = "^0.3.7"
langchain-community = "^0.3.7"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"